[tool.poetry]
name = "mapa"
version = "0.6.1"
description = "ðŸŒ Create 3d-printable STLs from satellite elevation data ðŸŒ"
authors = ["Fabian Gebhart"]
repository = "https://github.com/fgebhart/mapa"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.0.3"
numpy = "^1.21"
numba = "^0.55.1"
notebook = "^6.4.8"
ipyleaflet = "0.13.3"       # pinned since newer versions use questionable edit feature for rectangles
pystac-client = "^0.3.2"
rasterio = "^1.2.10"
haversine = "^2.5.1"
numpy-stl = "^2.16.3"
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ipython = "^8.0.1"
ipdb = "^0.13.9"
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[tool.poetry.scripts]
dem2stl = "mapa.cli:dem2stl"
mapa = "mapa.cli:mapa"

[tool.black]
target_version = ["py38"]
line-length = 121

[tool.isort]
multi_line_output = 3
line_length = 121
include_trailing_comma = true
