[tool.poetry]
name = "mapa"
version = "0.12.0"
description = "ðŸŒ Create 3d-printable STLs from satellite elevation data ðŸŒ"
authors = ["Fabian Gebhart"]
repository = "https://github.com/fgebhart/mapa"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
click = "^8.1.3"
numpy = "^1.23"
numba = "^0.56.4"
notebook = "^6.5.3"
ipyleaflet = "0.13.3"       # pinned since newer versions use questionable edit feature for rectangles
pystac-client = "^0.6.1"
rasterio = "^1.3.6"
haversine = "^2.8.0"
numpy-stl = "^3.0.1"
geojson = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ipython = "^8.10.0"
ipdb = "^0.13.9"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"

[tool.poetry.scripts]
dem2stl = "mapa.cli:dem2stl"
mapa = "mapa.cli:mapa"

[tool.black]
target_version = ["py38"]
line-length = 121

[tool.isort]
multi_line_output = 3
line_length = 121
include_trailing_comma = true
